--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -2,6 +2,7 @@
   border-bottom: 1px solid #3333;
   height: 60px;
   display: flex;
+  padding: 0 30%;
   justify-content: space-evenly;
   align-items: center;
   background: #ffffff;
@@ -25,4 +26,11 @@
 
 .social {
   width: 50px;
+}
+
+#instagramLogo {
+  display: flex;
+  justify-content: center;
+  width: 120px;
+  text-align: center;
 }
